Sonarqube対応
Code Smellsの一部を修正した。